test_regress/t/t_stmt_incr_bad.out
%Error-UNSUPPORTED: t/t_stmt_incr_bad.v:17:12: Unsupported: Inc/Dec of expression with side-effects
   17 |         arr[postincrement_i()]++;
      |            ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
